--- a/packages/react-pdf-highlighter/src/style/AreaHighlight.css
+++ b/packages/react-pdf-highlighter/src/style/AreaHighlight.css
@@ -1,7 +1,7 @@
 .AreaHighlight {
   border: 2px solid var(--text-light);
   border-radius: 10px;
-  background-color: rgba(252, 232, 151, 1.0);
+  background: rgba(255, 250, 0, .25);
   opacity: 1;
   mix-blend-mode: multiply;
 }
