--- a/packages/react-pdf-highlighter/src/style/Tip.css
+++ b/packages/react-pdf-highlighter/src/style/Tip.css
@@ -8,18 +8,22 @@
 }
 
 .Tip__card {
-  padding: 10px;
+  padding: 20px;
+  box-sizing: border-box;
+  min-width: 300px;
   background: #fff;
   background-clip: padding-box;
-  border: 1px solid #e8e8e8;
   border-radius: 4px;
-  box-shadow: 0 2px 4px rgba(37, 40, 43, 0.2);
+  box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.5);
+  border: 1px solid var(--translucent-gray-25)
 }
 
 .Tip__card textarea {
   font-size: 16px;
-  width: 200px;
+  width: 100%;
   height: 70px;
+  border-radius: 4px;
+  border: 1px solid var(--text-light)
 }
 
 .Tip__card input[type="submit"] {
